# cICQ

./: .gitignore  CMakeFile.txt  CMakeLists.txt  README.md  client.c  makefile  server.c  serverlist  start_cluster.py  world_cities
client/: client.cpp  console.cpp  fake_network.cpp  main.cpp  tcp.cpp  tcp_fail_t.cpp
include/: client.h  console.h  game.h  interface.h
include/interface/: console.h  interface.h
include/network/: fake_network.h  network.h  tcp.h  tcp_fail_t.h
server/: logPlay.cpp  logPlay.h  main.cpp  server.cpp  server.h
src/: console.cpp  game.cpp  main.cpp
