cmake_minimum_required( VERSION 2.6 )
project( cICQ )
set( CMAKE_BUILD_TYPE "Debug" ) 
set( CMAKE_CXX_STANDART 14 )
set( BIN_CLIENT cicq )
set( BIN_SERVER cicq_server )
include_directories( ./include )
set( CLIENT client )
set( CLIENT_SRC ./client )
set( SERVER_SRC ./server )
aux_source_directory( ${CLIENT_SRC} CLIENT_SOURCES )
add_executable( ${BIN_CLIENT} ${CLIENT_SOURCES} )
target_link_libraries( ${BIN_CLIENT} )
aux_source_directory( ${SERVER_SRC} SERVER_SOURCES )
add_executable( ${BIN_SERVER} ${SERVER_SOURCES} )
target_link_libraries( ${BIN_SERVER} )
